register put 으로 변경
