# docs/swagger.yaml
@@ -1,61 +1,5 @@
 basePath: /
 definitions:
-  auth.BindRefresh:
-    properties:
-      refresh_token:
-        type: string
-    required:
-    - refresh_token
-    type: object
-  auth.GetInfo:
-    properties:
-      name:
-        type: string
-      phone_number:
-        type: string
-      user_id:
-        type: integer
-    type: object
-  auth.IfSuccessReset:
-    properties:
-      message:
-        type: string
-      status:
-        $ref: '#/definitions/constants.Status'
-    type: object
-  auth.NeedLogin:
-    properties:
-      password:
-        type: string
-      phone_number:
-        type: string
-    required:
-    - password
-    - phone_number
-    type: object
-  auth.RegisterIn:
-    properties:
-      name:
-        type: string
-      password:
-        type: string
-      phone_number:
-        type: string
-    required:
-    - name
-    - password
-    - phone_number
-    type: object
-  auth.ResetModel:
-    properties:
-      new_password:
-        type: string
-      old_password:
-        type: string
-    required:
-    - new_password
-    - old_password
-    type: object
   cerror.CustomError400:
     properties:
       message:
@@ -91,6 +35,62 @@ definitions:
     x-enum-varnames:
     - StatusOk
     - StatusFail
+  login.BindRefresh:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
+  login.GetInfo:
+    properties:
+      name:
+        type: string
+      phone_number:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  login.IfSuccessReset:
+    properties:
+      message:
+        type: string
+      status:
+        $ref: '#/definitions/constants.Status'
+    type: object
+  login.NeedLogin:
+    properties:
+      password:
+        type: string
+      phone_number:
+        type: string
+    required:
+    - password
+    - phone_number
+    type: object
+  login.RegisterIn:
+    properties:
+      name:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+    required:
+    - name
+    - password
+    - phone_number
+    type: object
+  login.ResetModel:
+    properties:
+      new_password:
+        type: string
+      old_password:
+        type: string
+    required:
+    - new_password
+    - old_password
+    type: object
   middleware.AccessAndRefreshResponse:
     properties:
       access_token:
@@ -130,7 +130,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.GetInfo'
+            $ref: '#/definitions/login.GetInfo'
         "400":
           description: Bad Request
           schema:
@@ -193,7 +193,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/auth.NeedLogin'
+          $ref: '#/definitions/login.NeedLogin'
       produces:
       - application/json
       responses:
@@ -263,7 +263,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/auth.BindRefresh'
+          $ref: '#/definitions/login.BindRefresh'
       produces:
       - application/json
       responses:
@@ -287,7 +287,7 @@ paths:
       tags:
       - auth
   /api/auth/register:
-    post:
+    put:
       consumes:
       - application/json
       description: 회원가입
@@ -297,12 +297,14 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/auth.RegisterIn'
+          $ref: '#/definitions/login.RegisterIn'
       produces:
       - application/json
       responses:
         "200":
           description: OK
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -334,14 +336,14 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/auth.ResetModel'
+          $ref: '#/definitions/login.ResetModel'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.IfSuccessReset'
+            $ref: '#/definitions/login.IfSuccessReset'
         "400":
           description: Bad Request
           schema:
